frontend/test/should_pass/redirect_006.grg
rule r {
	y:Node -e:Edge->;
	
	modify {
		y -e->! y;
	}
}

