frontend/test/should_fail/basic_008.grg
test t {
  -e:Edge->;
  negative {
    -e:Edge->;
  }
}
